--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,10 +25,12 @@ jobs:
           repo:  massimilianokraus-prometeia/GithubHooks.Dotnet_Core_Console
     - name: Run Console App Artifact          
       run: dotnet ./console-app-artifacts/GithubHooks.Dotnet_Core_Console.dll
-    - run: gh pr merge ${{ github.event.pull_request.number }} --auto --merge
+    - name: Enable Automerge
+      run: gh pr merge ${{ github.event.pull_request.number }} --auto --merge
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - run: gh pr review ${{ github.event.pull_request.number }} --approve
+    - name: Add Approval Review
+      run: gh pr review ${{ github.event.pull_request.number }} --approve
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
