--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,18 +14,17 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
     
-
-                  #    
-                  #   Run .NET Core Console Application's Artifact from another Repo
-                  # 
+#    
+#   Run .NET Core Console Application's Artifact from another Repo with AUTOMERGE
+# 
     - name: Get .NET Core Console App Artifact
       uses: dawidd6/action-download-artifact@v2
       with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          workflow: artifacts-action.yaml
+          workflow: artifacts-action.yml
           repo:  massimilianokraus-prometeia/GithubHooks.Dotnet_Core_Console
     - name: Run Console App Artifact          
-      run: dotnet ./console-app-artifacts/GithubHooks.Dotnet_Core_Console.dll
+      run: dotnet ./console-app-artifacts/GithubHooks.Dotnet_Core_Console.dll -- "${{ github.event.pull_request.head.sha }}" "${{ github.event.pull_request.user.login }}" "${{ github.event.pull_request.title }}" "${{ github.event.pull_request.number }}"
     - name: Enable Automerge
       run: gh pr merge ${{ github.event.pull_request.number }} --auto --merge
       env:
@@ -35,47 +34,47 @@ jobs:
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
-                  #    
-                  #   Run .NET Core Console Application's Artifact from another Repo
-                  # 
+#    
+#   Run .NET Core Console Application's Artifact from another Repo without automerge
+# 
 #     - name: Get .NET Core Console App Artifact
 #       uses: dawidd6/action-download-artifact@v2
 #       with:
 #           github_token: ${{ secrets.GITHUB_TOKEN }}
-#           workflow: artifacts-action.yaml
+#           workflow: artifacts-action.yml
 #           repo:  massimilianokraus-prometeia/GithubHooks.Dotnet_Core_Console
 #     - name: Run Console App Artifact          
-#       run: dotnet ./console-app-artifacts/GithubHooks.Dotnet_Core_Console.dll
+#       run: dotnet ./console-app-artifacts/GithubHooks.Dotnet_Core_Console.dll -- "${{ github.event.pull_request.head.sha }}" "${{ github.event.pull_request.user.login }}" "${{ github.event.pull_request.title }}" "${{ github.event.pull_request.number }}"
 
 
     
-                  #    
-                  #   Run .NET Core Console Application from another Repo with a .bat file contained in that repo
-                  # 
+#    
+#   Run .NET Core Console Application from another Repo with a .bat file contained in that repo
+# 
 #     - name: Checkout Dotnet Core Console Repo
 #       uses: actions/checkout@v3
 #       with:
 #         repository: massimilianokraus-prometeia/GithubHooks.Dotnet_Core_Console
 #         token: ${{ secrets.GITHUB_TOKEN }}
-#     - run: ./execute_console_app.bat "${{ github.event.pull_request.title }}" "${{ github.event.pull_request.body }}"
+#     - run: ./execute_console_app.bat "${{ github.event.pull_request.head.sha }}" "${{ github.event.pull_request.user.login }}" "${{ github.event.pull_request.title }}" "${{ github.event.pull_request.number }}"
 
     
     
-                    #    
-                    #   Run .NET Core Console Application from another Repo
-                    # 
+#    
+#   Run .NET Core Console Application from another Repo
+# 
 #     - name: Checkout Dotnet Core Console Repo
 #       uses: actions/checkout@v3
 #       with:
 #         repository: massimilianokraus-prometeia/GithubHooks.Dotnet_Core_Console
 #         token: ${{ secrets.GITHUB_TOKEN }}
-#     - run: dotnet run -- "${{ github.sha }}" "${{ github.actor }}" "${{ github.event.head_commit.message }}"
+#     - run: dotnet run -- "${{ github.event.pull_request.head.sha }}" "${{ github.event.pull_request.user.login }}" "${{ github.event.pull_request.title }}" "${{ github.event.pull_request.number }}"
     
     
     
-                    #    
-                    #   Run .NET Framework 4.8 Console Application from another Repo with a .bat file contained in that Repo
-                    # 
+#    
+#   Run .NET Framework 4.8 Console Application from another Repo with a .bat file contained in that Repo
+# 
 #     - name: Checkout Dotnet 4.8 Console Repo
 #       uses: actions/checkout@v3
 #       with:
@@ -83,20 +82,18 @@ jobs:
 #         token: ${{ secrets.GITHUB_TOKEN }}
 #     - name: Setup MSBuild
 #       uses: microsoft/setup-msbuild@v1
-    
 #     - name: Setup NuGet
 #       uses: NuGet/setup-nuget@v1.0.5
-    
 #     - name: Build the Solution
 #       run: msbuild GithubHooks.Dotnet_48_Console.sln /p:Configuration=Release
 #     - name: Run .bat file
-#       run: ./execute_console_app.bat "${{ github.sha }}" "${{ github.actor }}" "${{ github.event.head_commit.message }}"
+#       run: ./execute_console_app.bat "${{ github.event.pull_request.head.sha }}" "${{ github.event.pull_request.user.login }}" "${{ github.event.pull_request.title }}" "${{ github.event.pull_request.number }}"
     
     
     
-                    #    
-                    #   Run .NET Framework 4.8 Console Application from another Repo
-                    # 
+#    
+#   Run .NET Framework 4.8 Console Application from another Repo
+# 
 #     - name: Checkout Dotnet 4.8 Console Repo
 #       uses: actions/checkout@v3
 #       with:
@@ -104,34 +101,32 @@ jobs:
 #         token: ${{ secrets.GITHUB_TOKEN }}
 #     - name: Setup MSBuild
 #       uses: microsoft/setup-msbuild@v1
-    
 #     - name: Setup NuGet
 #       uses: NuGet/setup-nuget@v1.0.5
-    
 #     - name: Build the Solution
 #       run: msbuild GithubHooks.Dotnet_48_Console.sln /p:Configuration=Release
 #     - name: Run App
 #       run: | 
 #         cd ./bin/Release
-#         .\GithubHooks.Dotnet_48_Console.exe "${{ github.sha }}" "${{ github.actor }}" "${{ github.event.head_commit.message }}"
+#         .\GithubHooks.Dotnet_48_Console.exe "${{ github.event.pull_request.head.sha }}" "${{ github.event.pull_request.user.login }}" "${{ github.event.pull_request.title }}" "${{ github.event.pull_request.number }}"
 
 
 
-                      #
-                      #   Run NodeJs Application from another repo
-                      #
+#
+#   Run NodeJs Application from another repo
+#
 #     - name: Checkout NodeJs Application Repo
 #       uses: actions/checkout@v3
 #       with:
 #         repository: massimilianokraus-prometeia/GithubHooks.NodeJs
 #         token: ${{ secrets.GITHUB_TOKEN }}
-#     - run: node ./index.js argv.js "${{ github.sha }}" "${{ github.actor }}" "${{ github.event.head_commit.message }}"
+#     - run: node ./index.js argv.js "${{ github.event.pull_request.head.sha }}" "${{ github.event.pull_request.user.login }}" "${{ github.event.pull_request.title }}" "${{ github.event.pull_request.number }}"
 
 
 
-                      #
-                      #   Run NodeJs Application from another repo with a .bat file 
-                      #
+#
+#   Run NodeJs Application from another repo with a .bat file 
+#
 #     - name: Checkout NodeJs Application Repo
 #       uses: actions/checkout@v3
 #       with:
@@ -141,4 +136,4 @@ jobs:
 #       uses: actions/setup-node@v3
 #       with:
 #         node-version: 16
-#     - run: ./execute_nodejs_app.bat "${{ github.sha }}" "${{ github.actor }}" "${{ github.event.head_commit.message }}"
+#     - run: ./execute_nodejs_app.bat "${{ github.event.pull_request.head.sha }}" "${{ github.event.pull_request.user.login }}" "${{ github.event.pull_request.title }}" "${{ github.event.pull_request.number }}"
